--- a/app/assets/templates/notebook-list.jst.ejs
+++ b/app/assets/templates/notebook-list.jst.ejs
@@ -10,7 +10,7 @@
 
       <span class="listgroup-item-heading">
         <span class="glyphicon glyphicon-folder-close"></span>
-          <%= notebook.get('title') %>
+          <%= notebook.shortTitle() %>
       </span>
 
       <% if (index !== 0) { %>
