--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,7 +14,7 @@
         var bsData = JSON.parse(div.text());
         var userId = bsData["userID"];
 
-        Memoboat.initialize(userId)
+        Memoboat.initialize(userId);
 
       })
     </script>
