--- a/app/assets/templates/tags/memo_tag_list.jst.ejs
+++ b/app/assets/templates/tags/memo_tag_list.jst.ejs
@@ -9,11 +9,11 @@
       <li class="btn-group">
         <button type="button" 
                 class="delete-tag btn btn-success btn-xs" 
-                data-id="<%= tag.id %>">
+                data-name="<%= tag.name %>">
                 &times;
         </button>
         <button class="btn btn-success btn-xs memo-tag-btn" 
-                data-id="<%= tag.id %>">
+                data-name="<%= tag.name %>">
                 <%= tag.get('name') %> 
         </button>
       </li>
